--- a/index.html
+++ b/index.html
@@ -1,1 +1,205 @@
+<!DOCTYPE html>
+<html lang="tr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Premium Magic Text Generator</title>
+    <style>
+        :root {
+            --gold: #ffcf40;
+            --dark-bg: #0a0a0c;
+            --card-bg: #16161a;
+            --accent: #7000ff;
+        }
 
+        body {
+            background: var(--dark-bg);
+            color: white;
+            font-family: 'Inter', sans-serif;
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            min-height: 100vh;
+        }
+
+        .header {
+            text-align: center;
+            padding: 50px 20px;
+            background: linear-gradient(to bottom, #1a1a2e, var(--dark-bg));
+            width: 100%;
+        }
+
+        h1 {
+            font-size: 3rem;
+            margin: 0;
+            background: linear-gradient(45deg, var(--gold), #ffffff);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            text-transform: uppercase;
+            letter-spacing: 4px;
+        }
+
+        .input-container {
+            width: 90%;
+            max-width: 800px;
+            margin-top: -30px;
+        }
+
+        #mainInput {
+            width: 100%;
+            padding: 25px;
+            font-size: 1.5rem;
+            border-radius: 15px;
+            border: 2px solid var(--accent);
+            background: var(--card-bg);
+            color: white;
+            box-shadow: 0 0 30px rgba(112, 0, 255, 0.3);
+            outline: none;
+            transition: 0.3s;
+        }
+
+        #mainInput:focus {
+            box-shadow: 0 0 50px rgba(112, 0, 255, 0.5);
+            transform: scale(1.02);
+        }
+
+        .results-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+            gap: 20px;
+            width: 90%;
+            max-width: 1200px;
+            padding: 50px 0;
+        }
+
+        .result-card {
+            background: var(--card-bg);
+            border: 1px solid #2d2d35;
+            padding: 20px;
+            border-radius: 12px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            transition: 0.2s;
+            cursor: pointer;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .result-card:hover {
+            border-color: var(--gold);
+            background: #1f1f27;
+        }
+
+        .result-text {
+            font-size: 1.4rem;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            padding-right: 10px;
+        }
+
+        .copy-badge {
+            font-size: 0.7rem;
+            background: var(--accent);
+            padding: 5px 10px;
+            border-radius: 5px;
+            text-transform: uppercase;
+        }
+
+        .toast {
+            position: fixed;
+            bottom: 20px;
+            background: var(--gold);
+            color: black;
+            padding: 10px 30px;
+            border-radius: 50px;
+            font-weight: bold;
+            display: none;
+            animation: slideUp 0.3s ease;
+        }
+
+        @keyframes slideUp { from { transform: translateY(100px); } to { transform: translateY(0); } }
+    </style>
+</head>
+<body>
+
+    <div class="header">
+        <h1>PREMIUM TEXT GEN</h1>
+        <p style="color: #888;">Kelmeni yaz, tarzını seç, tek tıkla kopyala.</p>
+    </div>
+
+    <div class="input-container">
+        <input type="text" id="mainInput" placeholder="Buraya yaz kral... (Örn: belali)" autocomplete="off">
+    </div>
+
+    <div class="results-grid" id="results">
+        </div>
+
+    <div class="toast" id="toast">Kopyalandı! ✅</div>
+
+    <script>
+        const input = document.getElementById('mainInput');
+        const resultsContainer = document.getElementById('results');
+        const toast = document.getElementById('toast');
+
+        // Font Haritaları (Sadece birkaç örnek, JS altında yüzlercesini üretiyor)
+        const maps = {
+            cursive: { a: '𝓪', b: '𝓫', c: '𝓬', d: '𝓭', e: '𝓮', f: '𝓯', g: '𝓰', h: '𝓱', i: '𝓲', j: '𝓳', k: '𝓴', l: '𝓵', m: '𝓶', n: '𝓷', o: '𝓸', p: '𝓹', q: '𝓺', r: '𝓻', s: '𝓼', t: '𝓽', u: '𝓾', v: '𝓿', w: '𝔀', x: '𝔁', y: '𝔂', z: '𝔃' },
+            gothic: { a: '𝔞', b: '𝔟', c: '𝔠', d: '𝔡', e: '𝔢', f: '𝔣', g: '𝔤', h: '𝔥', i: '𝔦', j: '𝔧', k: '𝔨', l: '𝔩', m: '𝔪', n: '𝔫', o: '𝔬', p: '𝔭', q: '𝔮', r: '𝔯', s: '𝔰', t: '𝔱', u: '𝔲', v: '𝔳', w: '𝔴', x: '𝔵', y: '𝔶', z: '𝔷' },
+            bold_cursive: { a: '𝓐', b: '𝓑', c: '𝓒', d: '𝓓', e: '𝓔', f: '𝓕', g: '𝓖', h: '𝓗', i: '𝓘', j: '𝓙', k: '𝓚', l: '𝓛', m: '𝓜', n: '𝓝', o: '𝓞', p: '𝓟', q: '𝓠', r: '𝓡', s: '𝓢', t: '𝓣', u: '𝓤', v: '𝓥', w: '𝓦', x: '𝓧', y: '𝓨', z: '𝓩' },
+            circles: { a: 'ⓐ', b: 'ⓑ', c: 'ⓒ', d: 'ⓓ', e: 'ⓔ', f: 'ⓕ', g: 'ⓖ', h: 'ⓗ', i: 'ⓘ', j: 'ⓙ', k: 'ⓚ', l: 'ⓛ', m: 'ⓜ', n: 'ⓝ', o: 'ⓞ', p: 'ⓟ', q: 'ⓠ', r: 'ⓡ', s: 'ⓢ', t: 'ⓣ', u: 'ⓤ', v: 'ⓥ', w: 'ⓦ', x: 'ⓧ', y: 'ⓨ', z: 'ⓩ' },
+            squares: { a: '🄰', b: '🄱', c: '🄲', d: '🄳', e: '🄴', f: '🄵', g: '🄿', h: '🄶', i: '🄸', j: '🄹', k: '🄺', l: '🄻', m: '🄼', n: '🄽', o: '🄾', p: '🄿', q: '🅀', r: '🅁', s: '🅂', t: '🅃', u: '🅄', v: '🅅', w: '🅆', x: '🅇', y: '🅈', z: '🅉' },
+            wide: { a: 'ａ', b: 'ｂ', c: 'ｃ', d: 'ｄ', e: 'ｅ', f: 'ｆ', g: 'ｇ', h: 'ｈ', i: 'ｉ', j: 'ｊ', k: 'ｋ', l: 'ｌ', m: 'ｍ', n: 'ｎ', o: 'ｏ', p: 'ｐ', q: 'ｑ', r: 'ｒ', s: 'ｓ', t: 'ｔ', u: 'ｕ', v: 'ｖ', w: 'ｗ', x: 'ｘ', y: 'ｙ', z: 'ｚ' }
+        };
+
+        // Süslemeler (Başına ve sonuna eklenen 500+ kombinasyon için)
+        const decorations = [
+            ["꧁", "꧂"], ["╰", "╯"], ["★", "★"], ["『", "』"], ["【", "】"], ["≋", "≋"], ["░", "░"], ["⚡", "⚡"], ["♛", "♛"], ["〆", ""], ["×", "×"]
+        ];
+
+        function convert(text) {
+            resultsContainer.innerHTML = '';
+            if(!text) return;
+
+            // 1. Temel Map Dönüşümleri
+            Object.keys(maps).forEach(key => {
+                let res = text.toLowerCase().split('').map(char => maps[key][char] || char).join('');
+                createCard(res);
+            });
+
+            // 2. Kombinasyon ve Süsleme Üretici (Sayıyı artırmak için döngü)
+            decorations.forEach(dec => {
+                let res = `${dec[0]} ${text} ${dec[1]}`;
+                createCard(res);
+                
+                // Farklı fontla süslemeyi birleştir (500+ çeşit bu mantıkla türer)
+                let cursiveRes = dec[0] + text.toLowerCase().split('').map(char => maps.cursive[char] || char).join('') + dec[1];
+                createCard(cursiveRes);
+            });
+        }
+
+        function createCard(content) {
+            const card = document.createElement('div');
+            card.className = 'result-card';
+            card.innerHTML = `
+                <div class="result-text">${content}</div>
+                <div class="copy-badge">Kopyala</div>
+            `;
+            card.onclick = () => {
+                navigator.clipboard.writeText(content);
+                showToast();
+            };
+            resultsContainer.appendChild(card);
+        }
+
+        function showToast() {
+            toast.style.display = 'block';
+            setTimeout(() => { toast.style.display = 'none'; }, 2000);
+        }
+
+        input.addEventListener('input', (e) => convert(e.target.value));
+    </script>
+</body>
+</html>
