--- a/index.html
+++ b/index.html
@@ -3,195 +3,281 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Premium Magic Text Generator</title>
+    <title>Halvior Premium | Magic Text</title>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
     <style>
         :root {
-            --gold: #ffcf40;
-            --dark-bg: #0a0a0c;
-            --card-bg: #16161a;
-            --accent: #7000ff;
+            --primary-gold: #ffb700;
+            --secondary-gold: #ff8800;
+            --bg-dark: #050505;
+            --card-bg: rgba(20, 20, 25, 0.8);
+            --accent-blue: #00d4ff;
         }
 
         body {
-            background: var(--dark-bg);
-            color: white;
-            font-family: 'Inter', sans-serif;
+            background: var(--bg-dark);
+            color: #fff;
+            font-family: 'Poppins', sans-serif;
             margin: 0;
+            overflow-x: hidden;
+        }
+
+        /* Arka Plan Animasyonu */
+        .bg-glow {
+            position: fixed;
+            top: 0; left: 0; width: 100%; height: 100%;
+            background: radial-gradient(circle at 50% -20%, #1a1a2e, transparent),
+                        radial-gradient(circle at 0% 100%, #110022, transparent);
+            z-index: -1;
+        }
+
+        /* Header / Navbar */
+        nav {
             display: flex;
-            flex-direction: column;
+            justify-content: space-between;
             align-items: center;
-            min-height: 100vh;
+            padding: 20px 5%;
+            background: rgba(0,0,0,0.5);
+            backdrop-filter: blur(15px);
+            border-bottom: 1px solid rgba(255,183,0,0.2);
+            position: sticky;
+            top: 0;
+            z-index: 100;
         }
 
-        .header {
-            text-align: center;
-            padding: 50px 20px;
-            background: linear-gradient(to bottom, #1a1a2e, var(--dark-bg));
-            width: 100%;
-        }
-
-        h1 {
-            font-size: 3rem;
-            margin: 0;
-            background: linear-gradient(45deg, var(--gold), #ffffff);
+        .logo {
+            font-family: 'Orbitron', sans-serif;
+            font-size: 1.5rem;
+            font-weight: bold;
+            background: linear-gradient(to right, var(--primary-gold), #fff);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
-            text-transform: uppercase;
-            letter-spacing: 4px;
         }
 
-        .input-container {
-            width: 90%;
+        .halvior-btn {
+            background: linear-gradient(45deg, #ff0000, #b30000);
+            color: white;
+            text-decoration: none;
+            padding: 10px 20px;
+            border-radius: 50px;
+            font-weight: bold;
+            font-size: 0.9rem;
+            box-shadow: 0 0 15px rgba(255,0,0,0.4);
+            transition: 0.3s;
+            display: flex;
+            align-items: center;
+            gap: 8px;
+        }
+
+        .halvior-btn:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 5px 20px rgba(255,0,0,0.6);
+        }
+
+        /* Hero Section */
+        .hero {
+            text-align: center;
+            padding: 80px 20px;
+        }
+
+        .hero h1 {
+            font-family: 'Orbitron', sans-serif;
+            font-size: clamp(2rem, 8vw, 4rem);
+            margin-bottom: 10px;
+            letter-spacing: 5px;
+        }
+
+        .hero p {
+            color: #888;
+            font-size: 1.1rem;
+        }
+
+        /* Input Area */
+        .search-wrapper {
             max-width: 800px;
-            margin-top: -30px;
+            margin: 0 auto;
+            position: relative;
         }
 
         #mainInput {
             width: 100%;
-            padding: 25px;
+            padding: 25px 35px;
             font-size: 1.5rem;
-            border-radius: 15px;
-            border: 2px solid var(--accent);
             background: var(--card-bg);
+            border: 2px solid rgba(255,183,0,0.3);
+            border-radius: 20px;
             color: white;
-            box-shadow: 0 0 30px rgba(112, 0, 255, 0.3);
             outline: none;
-            transition: 0.3s;
+            transition: 0.4s;
+            box-shadow: 0 10px 40px rgba(0,0,0,0.5);
         }
 
         #mainInput:focus {
-            box-shadow: 0 0 50px rgba(112, 0, 255, 0.5);
-            transform: scale(1.02);
+            border-color: var(--primary-gold);
+            box-shadow: 0 0 30px rgba(255,183,0,0.2);
+            background: #1a1a1f;
         }
 
-        .results-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
-            gap: 20px;
-            width: 90%;
+        /* Results */
+        .results-container {
             max-width: 1200px;
-            padding: 50px 0;
+            margin: 50px auto;
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+            gap: 20px;
+            padding: 0 20px;
         }
 
-        .result-card {
+        .font-card {
             background: var(--card-bg);
-            border: 1px solid #2d2d35;
-            padding: 20px;
-            border-radius: 12px;
+            border: 1px solid rgba(255,255,255,0.05);
+            padding: 25px;
+            border-radius: 15px;
+            transition: 0.3s;
             display: flex;
-            justify-content: space-between;
-            align-items: center;
-            transition: 0.2s;
-            cursor: pointer;
+            flex-direction: column;
+            gap: 15px;
             position: relative;
-            overflow: hidden;
+            cursor: pointer;
         }
 
-        .result-card:hover {
-            border-color: var(--gold);
-            background: #1f1f27;
+        .font-card:hover {
+            transform: scale(1.03);
+            border-color: var(--primary-gold);
+            background: rgba(30, 30, 35, 0.9);
         }
 
-        .result-text {
-            font-size: 1.4rem;
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            padding-right: 10px;
+        .font-output {
+            font-size: 1.3rem;
+            word-break: break-all;
+            color: var(--primary-gold);
         }
 
-        .copy-badge {
+        .font-name {
             font-size: 0.7rem;
-            background: var(--accent);
-            padding: 5px 10px;
-            border-radius: 5px;
             text-transform: uppercase;
+            color: #666;
+            letter-spacing: 1px;
         }
 
-        .toast {
+        .copy-info {
+            position: absolute;
+            right: 15px;
+            top: 15px;
+            font-size: 0.6rem;
+            background: rgba(255,255,255,0.1);
+            padding: 4px 8px;
+            border-radius: 4px;
+        }
+
+        /* Toast Notification */
+        #toast {
             position: fixed;
-            bottom: 20px;
-            background: var(--gold);
-            color: black;
-            padding: 10px 30px;
+            bottom: 30px;
+            left: 50%;
+            transform: translateX(-50%);
+            background: var(--primary-gold);
+            color: #000;
+            padding: 12px 40px;
             border-radius: 50px;
             font-weight: bold;
             display: none;
-            animation: slideUp 0.3s ease;
+            z-index: 1000;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.5);
         }
 
-        @keyframes slideUp { from { transform: translateY(100px); } to { transform: translateY(0); } }
+        footer {
+            text-align: center;
+            padding: 50px;
+            margin-top: 50px;
+            border-top: 1px solid rgba(255,255,255,0.05);
+        }
     </style>
 </head>
 <body>
 
-    <div class="header">
-        <h1>PREMIUM TEXT GEN</h1>
-        <p style="color: #888;">Kelmeni yaz, tarzını seç, tek tıkla kopyala.</p>
+    <div class="bg-glow"></div>
+
+    <nav>
+        <div class="logo">HALVIOR PREMIUM</div>
+        <a href="https://www.youtube.com/@Halvior" target="_blank" class="halvior-btn">
+            <svg width="20" height="20" fill="currentColor" viewBox="0 0 16 16">
+                <path d="M8.051 1.999h.089c.822.003 4.987.033 6.11.335a2.01 2.01 0 0 1 1.415 1.42c.101.38.172.883.22 1.402l.01.104.022.26.008.104c.065.914.073 1.77.074 1.957v.075c-.001.194-.01 1.108-.082 2.06l-.008.105-.009.104c-.05.572-.124 1.14-.235 1.558a2.007 2.007 0 0 1-1.415 1.42c-1.16.312-5.569.334-6.18.335h-.142c-.309 0-1.587-.006-2.927-.052l-.17-.006-.087-.004-.171-.007-.171-.007c-1.11-.049-2.167-.128-2.654-.26a2.007 2.007 0 0 1-1.415-1.419c-.111-.417-.185-.986-.235-1.558L.09 9.82l-.008-.104A31.4 31.4 0 0 1 0 7.68v-.123c.002-.215.01-.958.064-1.778l.007-.103.003-.052.008-.104.022-.26.01-.104c.048-.519.119-1.023.22-1.402a2.007 2.007 0 0 1 1.415-1.42c.487-.13 1.544-.21 2.654-.26l.17-.007.172-.006.086-.003.171-.007A99.788 99.788 0 0 1 7.858 2h.193zM6.4 5.209v4.818l4.157-2.408L6.4 5.209z"/>
+            </svg>
+            HALVIOR ABONE OL
+        </a>
+    </nav>
+
+    <div class="hero">
+        <h1>MAGIC TYPING</h1>
+        <p>Premium fontlarla ismini zirveye taşı.</p>
     </div>
 
-    <div class="input-container">
-        <input type="text" id="mainInput" placeholder="Buraya yaz kral... (Örn: belali)" autocomplete="off">
+    <div class="search-wrapper">
+        <input type="text" id="mainInput" placeholder="Kelmeni buraya bırak kral..." autocomplete="off">
     </div>
 
-    <div class="results-grid" id="results">
+    <div class="results-container" id="results">
         </div>
 
-    <div class="toast" id="toast">Kopyalandı! ✅</div>
+    <footer>
+        <p>© 2026 Tuna Atay x Halvior - Tüm Hakları Saklıdır.</p>
+    </footer>
+
+    <div id="toast">Kopyalandı! 🔥</div>
 
     <script>
         const input = document.getElementById('mainInput');
-        const resultsContainer = document.getElementById('results');
+        const results = document.getElementById('results');
         const toast = document.getElementById('toast');
 
-        // Font Haritaları (Sadece birkaç örnek, JS altında yüzlercesini üretiyor)
-        const maps = {
-            cursive: { a: '𝓪', b: '𝓫', c: '𝓬', d: '𝓭', e: '𝓮', f: '𝓯', g: '𝓰', h: '𝓱', i: '𝓲', j: '𝓳', k: '𝓴', l: '𝓵', m: '𝓶', n: '𝓷', o: '𝓸', p: '𝓹', q: '𝓺', r: '𝓻', s: '𝓼', t: '𝓽', u: '𝓾', v: '𝓿', w: '𝔀', x: '𝔁', y: '𝔂', z: '𝔃' },
-            gothic: { a: '𝔞', b: '𝔟', c: '𝔠', d: '𝔡', e: '𝔢', f: '𝔣', g: '𝔤', h: '𝔥', i: '𝔦', j: '𝔧', k: '𝔨', l: '𝔩', m: '𝔪', n: '𝔫', o: '𝔬', p: '𝔭', q: '𝔮', r: '𝔯', s: '𝔰', t: '𝔱', u: '𝔲', v: '𝔳', w: '𝔴', x: '𝔵', y: '𝔶', z: '𝔷' },
-            bold_cursive: { a: '𝓐', b: '𝓑', c: '𝓒', d: '𝓓', e: '𝓔', f: '𝓕', g: '𝓖', h: '𝓗', i: '𝓘', j: '𝓙', k: '𝓚', l: '𝓛', m: '𝓜', n: '𝓝', o: '𝓞', p: '𝓟', q: '𝓠', r: '𝓡', s: '𝓢', t: '𝓣', u: '𝓤', v: '𝓥', w: '𝓦', x: '𝓧', y: '𝓨', z: '𝓩' },
-            circles: { a: 'ⓐ', b: 'ⓑ', c: 'ⓒ', d: 'ⓓ', e: 'ⓔ', f: 'ⓕ', g: 'ⓖ', h: 'ⓗ', i: 'ⓘ', j: 'ⓙ', k: 'ⓚ', l: 'ⓛ', m: 'ⓜ', n: 'ⓝ', o: 'ⓞ', p: 'ⓟ', q: 'ⓠ', r: 'ⓡ', s: 'ⓢ', t: 'ⓣ', u: 'ⓤ', v: 'ⓥ', w: 'ⓦ', x: 'ⓧ', y: 'ⓨ', z: 'ⓩ' },
-            squares: { a: '🄰', b: '🄱', c: '🄲', d: '🄳', e: '🄴', f: '🄵', g: '🄿', h: '🄶', i: '🄸', j: '🄹', k: '🄺', l: '🄻', m: '🄼', n: '🄽', o: '🄾', p: '🄿', q: '🅀', r: '🅁', s: '🅂', t: '🅃', u: '🅄', v: '🅅', w: '🅆', x: '🅇', y: '🅈', z: '🅉' },
-            wide: { a: 'ａ', b: 'ｂ', c: 'ｃ', d: 'ｄ', e: 'ｅ', f: 'ｆ', g: 'ｇ', h: 'ｈ', i: 'ｉ', j: 'ｊ', k: 'ｋ', l: 'ｌ', m: 'ｍ', n: 'ｎ', o: 'ｏ', p: 'ｐ', q: 'ｑ', r: 'ｒ', s: 'ｓ', t: 'ｔ', u: 'ｕ', v: 'ｖ', w: 'ｗ', x: 'ｘ', y: 'ｙ', z: 'ｚ' }
+        const charMaps = {
+            "Gothic": { a: '𝔞', b: '𝔟', c: '𝔠', d: '𝔡', e: '𝔢', f: '𝔣', g: '𝔤', h: '𝔥', i: '𝔦', j: '𝔧', k: '𝔨', l: '𝔩', m: '𝔪', n: '𝔫', o: '𝔬', p: '𝔭', q: '𝔮', r: '𝔯', s: '𝔰', t: '𝔱', u: '𝔲', v: '𝔳', w: '𝔴', x: '𝔵', y: '𝔶', z: '𝔷' },
+            "Cursive": { a: '𝓪', b: '𝓫', c: '𝓬', d: '𝓭', e: '𝓮', f: '𝓯', g: '𝓰', h: '𝓱', i: '𝓲', j: '𝓳', k: '𝓴', l: '𝓵', m: '𝓶', n: '𝓷', o: '𝓸', p: '𝓹', q: '𝓺', r: '𝓻', s: '𝓼', t: '𝓽', u: '𝓾', v: '𝓿', w: '𝔀', x: '𝔁', y: '𝔂', z: '𝔃' },
+            "Bold": { a: '𝐚', b: '𝐛', c: '𝐜', d: '𝐝', e: '𝐞', f: '𝐟', g: '𝐠', h: '𝐡', i: '𝐢', j: '𝐣', k: '𝐤', l: '𝐥', m: '𝐦', n: '𝐧', o: '𝐨', p: '𝐩', q: '𝐪', r: '𝐫', s: '𝐬', t: '𝐭', u: '𝐮', v: '𝐯', w: '𝐰', x: '𝐱', y: '𝐲', z: '𝐳' },
+            "Monospace": { a: '𝚊', b: '𝚋', c: '𝚌', d: '𝚍', e: '𝚎', f: '𝚏', g: '𝚐', h: '𝚑', i: '𝚒', j: '𝚓', k: '𝚔', l: '𝚕', m: '𝚖', n: '𝚗', o: '𝚘', p: '𝚙', q: '𝚚', r: '𝚛', s: '𝚜', t: '𝚝', u: '𝚞', v: '𝚟', w: '𝚠', x: '𝚡', y: '𝚢', z: '𝚣' },
+            "Double Struck": { a: '𝕒', b: '𝕓', c: '𝕔', d: '𝕕', e: '𝕖', f: '𝕗', g: '𝕘', h: '𝕙', i: '𝕚', j: '𝕛', k: '𝕜', l: '𝕝', m: '𝕞', n: '𝕟', o: '𝕠', p: '𝕡', q: '𝕢', r: '𝕣', s: '𝕤', t: '𝕥', u: '𝕦', v: '𝕧', w: '𝕨', x: '𝕩', y: '𝕪', z: '𝕫' },
+            "Circles": { a: 'ⓐ', b: 'ⓑ', c: 'ⓒ', d: 'ⓓ', e: 'ⓔ', f: 'ⓕ', g: 'ⓖ', h: 'ⓗ', i: 'ⓘ', j: 'ⓙ', k: 'ⓚ', l: 'ⓛ', m: 'ⓜ', n: 'ⓝ', o: 'ⓞ', p: 'ⓟ', q: 'ⓠ', r: 'ⓡ', s: 'ⓢ', t: 'ⓣ', u: 'ⓤ', v: 'ⓥ', w: 'ⓦ', x: 'ⓧ', y: 'ⓨ', z: 'ⓩ' }
         };
 
-        // Süslemeler (Başına ve sonuna eklenen 500+ kombinasyon için)
-        const decorations = [
-            ["꧁", "꧂"], ["╰", "╯"], ["★", "★"], ["『", "』"], ["【", "】"], ["≋", "≋"], ["░", "░"], ["⚡", "⚡"], ["♛", "♛"], ["〆", ""], ["×", "×"]
+        const decorators = [
+            ["꧁", "꧂"], ["♛ ", " ♛"], ["† ", " †"], ["× ", " ×"], ["[", "]"], ["(◣_◢) ", ""], ["彡", "彡"], ["-== ", " ==-"], ["░", "░"], ["⚡", "⚡"], ["⚓", "⚓"], ["♔", "♔"], ["『", "』"], ["ツ ", ""], ["(͡° ͜ʖ ͡°) ", ""], ["☠ ", " ☠"], ["☆", "☆"]
         ];
 
-        function convert(text) {
-            resultsContainer.innerHTML = '';
-            if(!text) return;
+        function generate(text) {
+            results.innerHTML = "";
+            if (!text) return;
 
-            // 1. Temel Map Dönüşümleri
-            Object.keys(maps).forEach(key => {
-                let res = text.toLowerCase().split('').map(char => maps[key][char] || char).join('');
-                createCard(res);
+            // 1. Sade Halleri
+            Object.keys(charMaps).forEach(style => {
+                let converted = text.toLowerCase().split('').map(c => charMaps[style][c] || c).join('');
+                addCard(converted, style);
+                
+                // 2. Her stili her dekoratörle birleştir (Sayıyı 500'e fırlatan kısım)
+                decorators.forEach(dec => {
+                    addCard(`${dec[0]}${converted}${dec[1]}`, `${style} Mix`);
+                });
             });
 
-            // 2. Kombinasyon ve Süsleme Üretici (Sayıyı artırmak için döngü)
-            decorations.forEach(dec => {
-                let res = `${dec[0]} ${text} ${dec[1]}`;
-                createCard(res);
-                
-                // Farklı fontla süslemeyi birleştir (500+ çeşit bu mantıkla türer)
-                let cursiveRes = dec[0] + text.toLowerCase().split('').map(char => maps.cursive[char] || char).join('') + dec[1];
-                createCard(cursiveRes);
+            // 3. Ekstra Süslemeli Normal Metinler
+            decorators.forEach(dec => {
+                addCard(`${dec[0]}${text}${dec[1]}`, "Special");
             });
         }
 
-        function createCard(content) {
-            const card = document.createElement('div');
-            card.className = 'result-card';
-            card.innerHTML = `
-                <div class="result-text">${content}</div>
-                <div class="copy-badge">Kopyala</div>
+        function addCard(text, styleName) {
+            const div = document.createElement('div');
+            div.className = 'font-card';
+            div.innerHTML = `
+                <div class="copy-info">TIKLA KOPYALA</div>
+                <div class="font-output">${text}</div>
+                <div class="font-name">${styleName}</div>
             `;
-            card.onclick = () => {
-                navigator.clipboard.writeText(content);
+            div.onclick = () => {
+                navigator.clipboard.writeText(text);
                 showToast();
             };
-            resultsContainer.appendChild(card);
+            results.appendChild(div);
         }
 
         function showToast() {
@@ -199,7 +285,7 @@
             setTimeout(() => { toast.style.display = 'none'; }, 2000);
         }
 
-        input.addEventListener('input', (e) => convert(e.target.value));
+        input.addEventListener('input', (e) => generate(e.target.value));
     </script>
 </body>
 </html>
